deployment/k8s_prod/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sweb-backend-mysql
  labels:
    app: sweb-backend-mysql
    tier: database
spec:
  replicas: 1 
  template:
    metadata:
      labels:
        app: sweb-backend-mysql
        tier: database
    spec:
      containers:
        - name: sweb-backend-mysql
          image: mysql:5.7
          ports:
            - name: client-port
              containerPort: 3306
          volumeMounts:
            - name: sweb-pv-claim
              mountPath: /var/lib/mysql 
              subPath: mysql
          resources:
            requests:
              cpu: "4"
              memory: "16Gi"
            limits:
              cpu: "8"
              memory: "32Gi"
      imagePullSecrets:
        - name: private-registry-auth
      volumes:
        - name: sweb-pv-claim
          persistentVolumeClaim:
            claimName: sweb-pv-claim
  selector:
    matchLabels:
      app: sweb-backend-mysql
      tier: database
