deployment/k8s_prod/api-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: swebapi-service 
spec:
  type: NodePort
  ports:
    - port: 5000
  selector:
    app: sweb-backend
