deployment/k8s_prod/app-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: sweb-frontend-service
spec:
  ports:
    - port: 3000
  selector:
    app: sweb-frontend
