deployment/k8s_prod/mysql-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: sweb-mysql-service 
spec:
  ports:
    - port: 3306
  type: NodePort
  selector:
    app: sweb-backend-mysql
